# pbtool

./: Cargo.toml  readme.md
src/: main.rs
test/: a.json  a.proto  part2.proto  part3.proto
