[package]
name = "pbtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.3.0"
protobuf-parse = "3.3.0"
protobuf-json-mapping = "3.3.0"
clap = {version="4.4.12", features=["derive"]}
binascii = "0.1.4"